Fix padding of nav on mobile

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -549,6 +549,7 @@ footer {
   }
 
   nav {
+    padding-top: 18px;
     margin-bottom: 40px;
   }
 
